# Card-Game-Online

./: .gitignore  db.sqlite3  pyproject.toml
.devcontainer/: .bash_aliases  .bash_aliases.sh  Dockerfile  devcontainer.json  docker-compose.yml
apps/blackjack/: apps.py  urls.py  views.py
apps/blackjack/templates/blackjack/: turn.html
apps/core/: models.py  utils.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/core/: home_page.html  turn.html
apps/core/templates/core/components/: card.html
apps/core/templates/core/layouts/: base.html
apps/war/: admin.py  apps.py  engine.py  models.py  urls.py  views.py  viewsets.py  wagtail_hooks.py
apps/war/migrations/: 0001_initial.py
apps/war/templates/war/: turn.html
apps/war/templates/war/partials/: board.html
config/: settings.py  urls.py
core/: settings.py  urls.py
